# move-color-prototype

./: .clang-format  .gitignore  CMakeLists.txt  Calibrate.cpp  Calibrate.h  CalibrationHandler.cpp  CalibrationHandler.h  CircleHandler.cpp  CircleHandler.h  Doxyfile  LICENSE  Move_Color_Prototype.project  ParticleWeighting.cpp  ParticleWeighting.h  README.md  environment.yml  linux_color_control.txt  main.cpp
Code/: CalibrationHandler.cpp  CalibrationHandler.h  CircleHandler.cpp  CircleHandler.h  ParticleWeighting.cpp  ParticleWeighting.h  analyse_pictures.ipynb  main.cpp
Code/include/: CalibrationHandler.h  CircleHandler.h  ParticleWeighting.h
Code/src/: CalibrationHandler.cpp  CircleHandler.cpp  ParticleWeighting.cpp
docs/html/: _c_make_files_23_822_81_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_822_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _calibration_handler_8cpp.html  _calibration_handler_8cpp_8o_8d.html  _calibration_handler_8h.html  _calibration_handler_8h_source.html  _circle_handler_8cpp.html  _circle_handler_8cpp_8o_8d.html  _circle_handler_8h.html  _circle_handler_8h_source.html  _particle_weighting_8cpp.html  _particle_weighting_8cpp_8o_8d.html  _particle_weighting_8h.html  _particle_weighting_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  calibration__handler_8cpp.html  calibration__handler_8h.html  calibration__handler_8h_source.html  circle__handler_8cpp.html  circle__handler_8h.html  circle__handler_8h_source.html  class_calibration_handler-members.html  class_calibration_handler.html  class_circle_handler-members.html  class_circle_handler.html  class_particle_weighting-members.html  class_particle_weighting.html  classes.html  dir_23fdee2f6995db16c755697cdf620cf4.html  dir_479d200780a1e273a82080239021897b.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_562250f81d431c2e4bf06f5f84066d42.html  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.html  dir_5fcb7e38cd94c451931e23006c00ecc4.html  dir_6216f5a2401a397ece83a7f25bbd71a9.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6cda2bba4d9db2835604129187f396ab.html  (+35 more)
examples/: main.cpp
include/: ParticleWeighting.h  calibration_handler.h  circle_handler.h  particle_weighting.h
src/: CircleHandler.cpp  ParticleWeighting.cpp  calibration_handler.cpp  circle_handler.cpp  particle_weighting.cpp
(+45 files in other folders)
